# HNS-FinalBoss

./: .gitignore  Dockerfile.monolithic  README.md  docker-compose.final.yml  docker-compose.yml  simulate.py  supervisord.conf
analytics/: .RData  .Rhistory  Dockerfile  analytics.R
analytics/.Rproj.user/64CA3DDC/pcs/: files-pane.pper  windowlayoutstate.pper
devops/: Dockerfile  docker-compose.yml
devops/mosquitto/: mosquitto.conf
edge/: diagram.json  libraries.txt  model_road.h  model_shock.h  model_spoilage.h  simulator.py  sketch.ino  train_multi_models.py
ingestion/: Dockerfile  docker-compose.yml  ingestion.py  requirements.txt
rust-bridge/: Cargo.toml  Dockerfile
rust-bridge/src/: main.rs
shared/checkpoints/: .gitkeep
shared/data/: .gitkeep  data_cold_chain.csv  data_road_surface.csv  data_truck_shock.csv  fleet_location_log.csv  raw_telemetry.csv  wokwi_master_log.csv
shared/data/fleet_data_lake.parquet/device_id=truck_01/: .part-00000-1fe1a485-f44c-4e3c-8bfd-116673aea6e3.c000.snappy.parquet.crc  .part-00000-41a02b21-2d79-4239-8fb4-c25210e25257.c000.snappy.parquet.crc  .part-00000-afa55c9c-1baa-4670-85a5-f26aa7e2230e.c000.snappy.parquet.crc  .part-00000-c6dd5c1b-c9f6-4f21-86fc-b5db36158d24.c000.snappy.parquet.crc  .part-00000-d6c54a71-6d74-463a-b643-f8de4c37010a.c000.snappy.parquet.crc  .part-00000-f557d9ac-b2c0-4c32-8354-17e27e4e8417.c000.snappy.parquet.crc  part-00000-1fe1a485-f44c-4e3c-8bfd-116673aea6e3.c000.snappy.parquet  part-00000-41a02b21-2d79-4239-8fb4-c25210e25257.c000.snappy.parquet  (+4 more)
visualization/: powerbi_guide.md
(+5 files in other folders)
